--- a/src/main/resources/templates/unit4_restaurants.html
+++ b/src/main/resources/templates/unit4_restaurants.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Restaurants</title>
+  <style>
+    .single_line {border: 1px solid #000;}
+    .single_line td {border: 1px solid #000;}
+  </style>
 </head>
 <body>
 <h1>Restaurants</h1>
-<table border="1" cellpadding="5">
+<table class="single_line" cellpadding="5">
   <thead>
     <tr>
       <th>ID</th>
