--- a/src/main/resources/templates/anime-main/blog-details.html
+++ b/src/main/resources/templates/anime-main/blog-details.html
@@ -202,16 +202,16 @@
                             </div>
                             <div class="blog__details__form">
                                 <h4>Leave A Commnet</h4>
-                                <form action="#">
+                                <form action="/movies/detail" method="POST">
                                     <div class="row">
                                         <div class="col-lg-6 col-md-6 col-sm-6">
-                                            <input type="text" placeholder="Name">
+                                            <input type="text" placeholder="Name" name="name">
                                         </div>
                                         <div class="col-lg-6 col-md-6 col-sm-6">
-                                            <input type="text" placeholder="Email">
+                                            <input type="text" placeholder="Email" name="email">
                                         </div>
                                         <div class="col-lg-12">
-                                            <textarea placeholder="Message"></textarea>
+                                            <textarea placeholder="Message" name="message"></textarea>
                                             <button type="submit" class="site-btn">Send Message</button>
                                         </div>
                                     </div>
